--- a/app/src/main/res/values-sw440dp/dimens.xml
+++ b/app/src/main/res/values-sw440dp/dimens.xml
@@ -182,6 +182,7 @@
 <dimen name="dp_500">586dp</dimen>
 <dimen name="sp_8">9sp</dimen>
 <dimen name="sp_10">11sp</dimen>
+<dimen name="sp_11">12sp</dimen>
 <dimen name="sp_12">14sp</dimen>
 <dimen name="sp_14">16sp</dimen>
 <dimen name="sp_16">18sp</dimen>
