--- a/app/src/main/res/layout/fragment_inform.xml
+++ b/app/src/main/res/layout/fragment_inform.xml
@@ -14,7 +14,7 @@
             android:layout_height="@dimen/dp_24"
             android:layout_gravity="left|center"
             android:layout_marginLeft="@dimen/dp_10"
-            android:background="@drawable/ic_placeholder"/>
+            android:src=""/>
         <android.support.design.widget.TabLayout
             android:id="@+id/inform_detail_tab"
             android:layout_width="@dimen/dp_260"
