--- a/app/src/main/res/layout/item_inform_column.xml
+++ b/app/src/main/res/layout/item_inform_column.xml
@@ -13,6 +13,7 @@
         android:id="@+id/inform_column_img"
         android:layout_width="@dimen/dp_60"
         android:layout_height="@dimen/dp_60"
+        android:src="@drawable/logo"
         android:layout_weight="1"/>
     <RelativeLayout
         android:layout_width="0dp"
@@ -54,7 +55,7 @@
             android:id="@+id/inform_column_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_8"
+
 
             android:layout_above="@id/inform_column_bottom"
             android:lines="1"
