--- a/app/src/main/res/values-sw300dp/dimens.xml
+++ b/app/src/main/res/values-sw300dp/dimens.xml
@@ -182,6 +182,7 @@
 <dimen name="dp_500">400dp</dimen>
 <dimen name="sp_8">6sp</dimen>
 <dimen name="sp_10">8sp</dimen>
+<dimen name="sp_11">8sp</dimen>
 <dimen name="sp_12">9sp</dimen>
 <dimen name="sp_14">11sp</dimen>
 <dimen name="sp_16">12sp</dimen>
