--- a/app/src/main/res/values-sw340dp/dimens.xml
+++ b/app/src/main/res/values-sw340dp/dimens.xml
@@ -182,6 +182,7 @@
 <dimen name="dp_500">453dp</dimen>
 <dimen name="sp_8">7sp</dimen>
 <dimen name="sp_10">9sp</dimen>
+<dimen name="sp_11">9sp</dimen>
 <dimen name="sp_12">10sp</dimen>
 <dimen name="sp_14">12sp</dimen>
 <dimen name="sp_16">14sp</dimen>
