--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -182,6 +182,7 @@
 <dimen name="dp_500">479dp</dimen>
 <dimen name="sp_8">7sp</dimen>
 <dimen name="sp_10">9sp</dimen>
+<dimen name="sp_11">10sp</dimen>
 <dimen name="sp_12">11sp</dimen>
 <dimen name="sp_14">13sp</dimen>
 <dimen name="sp_16">15sp</dimen>
