--- a/app/src/main/res/values-sw375dp/dimens.xml
+++ b/app/src/main/res/values-sw375dp/dimens.xml
@@ -182,6 +182,7 @@
 <dimen name="dp_500">500dp</dimen>
 <dimen name="sp_8">8sp</dimen>
 <dimen name="sp_10">10sp</dimen>
+<dimen name="sp_11">11sp</dimen>
 <dimen name="sp_12">12sp</dimen>
 <dimen name="sp_14">14sp</dimen>
 <dimen name="sp_16">16sp</dimen>
