--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -182,6 +182,7 @@
 <dimen name="dp_500">547dp</dimen>
 <dimen name="sp_8">8sp</dimen>
 <dimen name="sp_10">10sp</dimen>
+<dimen name="sp_11">12sp</dimen>
 <dimen name="sp_12">13sp</dimen>
 <dimen name="sp_14">15sp</dimen>
 <dimen name="sp_16">17sp</dimen>
