--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -182,6 +182,7 @@
 <dimen name="dp_500">639dp</dimen>
 <dimen name="sp_8">10sp</dimen>
 <dimen name="sp_10">12sp</dimen>
+<dimen name="sp_11">14sp</dimen>
 <dimen name="sp_12">15sp</dimen>
 <dimen name="sp_14">17sp</dimen>
 <dimen name="sp_16">20sp</dimen>
