--- a/app/src/main/res/layout/item_promote_goods.xml
+++ b/app/src/main/res/layout/item_promote_goods.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/dp_10"
+    android:background="@color/white"
     >
 
     <cn.czyugang.tcg.client.utils.img.ImgView
