--- a/app/src/main/res/layout/fragment_inform.xml
+++ b/app/src/main/res/layout/fragment_inform.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              >
 
     <FrameLayout
         style="@style/title_title"
@@ -14,7 +15,7 @@
             android:layout_height="@dimen/dp_24"
             android:layout_gravity="left|center"
             android:layout_marginLeft="@dimen/dp_10"
-            android:src=""/>
+            android:src="@drawable/ic_logout_avatar"/>
         <android.support.design.widget.TabLayout
             android:id="@+id/inform_detail_tab"
             android:layout_width="@dimen/dp_260"
