--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -181,6 +181,7 @@
 <dimen name="dp_490">418dp</dimen>
 <dimen name="dp_500">426dp</dimen>
 <dimen name="sp_8">6sp</dimen>
+<dimen name="sp_9">7sp</dimen>
 <dimen name="sp_10">8sp</dimen>
 <dimen name="sp_11">9sp</dimen>
 <dimen name="sp_12">10sp</dimen>
