--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -196,58 +196,12 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <!--底部购物-->
-    <LinearLayout
+    <cn.czyugang.tcg.client.widget.BottomBalanceView
         android:id="@+id/store_bottomL"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_50"
         android:layout_gravity="bottom"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        >
-
-        <TextView
-            android:id="@+id/store_rest"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/main_black"
-            android:gravity="center"
-            android:text="商户休息中  不接受订单喔"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_16"
-            android:visibility="gone"
-            />
-
-        <ImageView
-            android:id="@+id/store_trolley_img"
-            android:layout_width="@dimen/dp_30"
-            android:layout_height="@dimen/dp_30"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_16"
-            android:src="@drawable/trolley"/>
-
-        <TextView
-            android:id="@+id/store_good_nums"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="未选购商品哦"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/text_gray"
-            />
-        <include layout="@layout/space_h"/>
-
-        <TextView
-            android:id="@+id/store_buy_commit"
-            android:layout_width="@dimen/dp_120"
-            android:layout_height="match_parent"
-            android:background="@color/grey_350"
-            android:gravity="center"
-            android:text="20元起送"
-            android:textSize="@dimen/sp_18"
-            android:textColor="@color/white"
-            />
-
-    </LinearLayout>
+        />
 
     <View
         android:id="@+id/store_bottom_bar"
