--- a/app/src/main/res/layout/fragment_trolley.xml
+++ b/app/src/main/res/layout/fragment_trolley.xml
@@ -20,7 +20,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/trolley_store_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         />
 
     <include layout="@layout/view_split_bar_light"/>
