--- a/app/src/main/res/layout/item_trolley_goods.xml
+++ b/app/src/main/res/layout/item_trolley_goods.xml
@@ -1,100 +1,244 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.mcxtzhang.swipemenulib.SwipeMenuLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:layout_width="@dimen/dp_40"
-        android:layout_height="@dimen/dp_60"
-        android:layout_marginTop="@dimen/dp_10">
-
-        <cn.czyugang.tcg.client.widget.SelectButton
-            android:id="@+id/item_select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
-    </FrameLayout>
-
-    <cn.czyugang.tcg.client.utils.img.ImgView
-        android:id="@+id/item_img"
-        android:layout_width="@dimen/dp_60"
-        android:layout_height="@dimen/dp_60"
-        android:layout_marginLeft="@dimen/dp_40"
-        android:layout_marginRight="@dimen/dp_6"
-        android:layout_marginTop="@dimen/dp_10"
-        />
-
-    <!--商品名称-->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_toRightOf="@id/item_img"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingRight="@dimen/dp_10">
+        android:background="@color/white">
 
-        <View
-            android:layout_width="@dimen/dp_30"
-            android:layout_height="@dimen/dp_15"
-            android:layout_marginRight="@dimen/dp_4"
-            android:background="@drawable/tag_warm_up"
+        <FrameLayout
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_60"
+            android:layout_marginTop="@dimen/dp_10">
+
+            <cn.czyugang.tcg.client.widget.SelectButton
+                android:id="@+id/item_select"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                />
+        </FrameLayout>
+
+        <cn.czyugang.tcg.client.utils.img.ImgView
+            android:id="@+id/item_img"
+            android:layout_width="@dimen/dp_60"
+            android:layout_height="@dimen/dp_60"
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginRight="@dimen/dp_6"
+            android:layout_marginTop="@dimen/dp_10"
             />
 
+        <!--商品名称-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_toRightOf="@id/item_img"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingRight="@dimen/dp_10"
+            android:id="@+id/linearLayout">
+
+            <View
+                android:id="@+id/item_hot_tag"
+                android:layout_width="@dimen/dp_30"
+                android:layout_height="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_4"
+                android:background="@drawable/tag_warm_up"
+                />
+
+            <TextView
+                android:id="@+id/item_name"
+                style="@style/text_12_black"
+                android:text="商品1123123123123123"
+                />
+
+            <include layout="@layout/space_h"/>
+
+            <TextView
+                android:id="@+id/item_price"
+                style="@style/text_12_black"
+                android:text="￥188.88"
+                />
+        </LinearLayout>
+
+        <!--规格-->
         <TextView
-            style="@style/text_12_black"
-            android:text="商品1123123123123123"
+            android:id="@+id/item_spec"
+            style="@style/text_12_gray"
+            android:layout_marginTop="@dimen/dp_30"
+            android:layout_toRightOf="@id/item_img"
+            android:text="规格1+规格2+标签1,标签2"
             />
 
-        <include layout="@layout/space_h"/>
+        <ImageView
+            android:id="@+id/item_spec_edit"
+            android:layout_width="@dimen/dp_12"
+            android:layout_height="@dimen/dp_12"
+            android:layout_toRightOf="@id/item_spec"
+            android:layout_marginTop="@dimen/dp_32"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:src="@drawable/icon_revise"
+            />
 
+        <!--限惠-->
         <TextView
-            style="@style/text_12_black"
-            android:text="￥188.88"
+            android:id="@+id/item_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/item_img"
+            android:layout_toRightOf="@id/item_img"
+            android:background="@drawable/border_rect_blue"
+            android:paddingBottom="@dimen/dp_1"
+            android:paddingLeft="@dimen/dp_6"
+            android:paddingRight="@dimen/dp_6"
+            android:paddingTop="@dimen/dp_1"
+            android:text="限惠2件，含1件原价商品"
+            android:textColor="@color/main_light_blue"
+            android:textSize="@dimen/dp_10"
             />
-    </LinearLayout>
+
+        <!--活动价格标签-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/item_img"
+            android:layout_below="@id/item_img"
+            android:layout_marginTop="@dimen/dp_5"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/item_activity_priceL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_5"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:id="@+id/item_activity_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/main_orange"
+                    android:paddingBottom="@dimen/dp_1"
+                    android:paddingLeft="@dimen/dp_6"
+                    android:paddingRight="@dimen/dp_6"
+                    android:paddingTop="@dimen/dp_1"
+                    android:text="活动价格标签"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_10"
+                    />
+
+                <TextView
+                    android:id="@+id/item_activity_price_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:text="MM月DD日 hh:mm 开始"
+                    android:textColor="@color/main_orange"
+                    android:textSize="@dimen/dp_9"
+                    />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_0.5"
+                android:layout_marginTop="@dimen/dp_5"
+                android:background="@color/bg"
+                />
+        </LinearLayout>
+
+        <!--增减-->
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/dp_10"
+            android:paddingBottom="@dimen/dp_10"
+            android:id="@+id/frameLayout">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_24"
+                android:background="@drawable/border_rect_grey"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                >
+
+                <View
+                    android:id="@+id/item_minus"
+                    android:layout_width="@dimen/dp_10"
+                    android:layout_height="@dimen/dp_2"
+                    android:layout_marginLeft="@dimen/dp_8"
+                    android:layout_marginRight="@dimen/dp_8"
+                    android:background="@color/grey_350"
+                    />
+
+                <View
+                    android:id="@+id/item_minus_bar"
+                    android:layout_width="@dimen/dp_1"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey_350"
+                    />
+
+                <TextView
+                    android:id="@+id/item_num"
+                    style="@style/text_14_black"
+                    android:gravity="center"
+                    android:minWidth="@dimen/dp_35"
+                    android:text="0"
+                    />
+
+                <View
+                    android:id="@+id/item_num_bar"
+                    android:layout_width="@dimen/dp_1"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey_350"
+                    />
+
+                <ImageView
+                    android:id="@+id/item_plus"
+                    android:layout_width="@dimen/dp_26"
+                    android:layout_height="@dimen/dp_26"
+                    android:padding="@dimen/dp_8"
+                    android:src="@drawable/icon_add"
+                    />
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+    </RelativeLayout>
+
 
     <TextView
-        android:id="@+id/item_spec"
-        style="@style/text_12_gray"
-        android:layout_marginTop="@dimen/dp_30"
-        android:layout_toRightOf="@id/item_img"
-        android:text="规格1+规格2+标签1,标签2"
-        />
-
-    <TextView
-        android:id="@+id/item_tag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/item_img"
-        android:layout_toRightOf="@id/item_img"
-        android:background="@drawable/border_rect_blue"
-        android:paddingLeft="@dimen/dp_6"
-        android:paddingRight="@dimen/dp_6"
-        android:paddingTop="@dimen/dp_1"
-        android:paddingBottom="@dimen/dp_1"
-        android:text="限惠2件，含1件原价商品"
-        android:textColor="@color/main_light_blue"
-        android:textSize="@dimen/dp_10"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/main_orange"
-        android:layout_alignLeft="@id/item_img"
-        android:layout_below="@id/item_img"
-        android:layout_marginTop="@dimen/dp_10"
-        android:paddingLeft="@dimen/dp_6"
-        android:paddingRight="@dimen/dp_6"
-        android:paddingTop="@dimen/dp_1"
-        android:paddingBottom="@dimen/dp_1"
-        android:text="活动价格标签"
+        android:id="@+id/item_collect"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/linearLayout"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_toLeftOf="@+id/frameLayout"
+        android:layout_toStartOf="@+id/frameLayout"
+        android:background="@color/main_light_red"
+        android:gravity="center"
+        android:text="移入收藏"
         android:textColor="@color/white"
-        android:textSize="@dimen/sp_10"
-        />
+        android:textSize="@dimen/sp_18"/>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/item_delete"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="match_parent"
+        android:background="@color/main_red"
+        android:gravity="center"
+        android:text="删除"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_18"/>
+
+</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
