--- a/app/src/main/res/layout/item_trolley_store_goods.xml
+++ b/app/src/main/res/layout/item_trolley_store_goods.xml
@@ -1,7 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<com.mcxtzhang.swipemenulib.SwipeMenuLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/dp_70">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_60"
+            >
+
+            <cn.czyugang.tcg.client.widget.SelectButton
+                android:id="@+id/item_select"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/dp_10"
+            android:paddingTop="@dimen/dp_10">
+            <!--商品名称-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                >
+
+                <View
+                    android:id="@+id/item_hot_tag"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_15"
+                    android:layout_marginRight="@dimen/dp_4"
+                    android:background="@drawable/tag_warm_up"
+                    />
+
+                <TextView
+                    android:id="@+id/item_name"
+                    style="@style/text_12_black"
+                    android:text="商品11231231231231"
+                    />
+
+            </LinearLayout>
+
+            <!--规格-->
+            <TextView
+                android:id="@+id/item_spec"
+                style="@style/text_12_gray"
+                android:layout_marginTop="@dimen/dp_6"
+                android:layout_toRightOf="@id/item_img"
+                android:text="规格1+规格2+标签1,标签2"
+                />
+
+            <!--限惠-->
+            <TextView
+                android:id="@+id/item_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_3"
+                android:background="@drawable/border_rect_blue"
+                android:paddingBottom="@dimen/dp_1"
+                android:paddingLeft="@dimen/dp_6"
+                android:paddingRight="@dimen/dp_6"
+                android:paddingTop="@dimen/dp_1"
+                android:text="限惠2件，含1件原价商品"
+                android:textColor="@color/main_light_blue"
+                android:textSize="@dimen/dp_10"
+                />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/item_price"
+            style="@style/text_18_black"
+            android:text="￥188.88"
+            android:textColor="@color/main_red"
+            />
+
+        <!--增减-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_24"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dp_14"
+            android:layout_marginRight="@dimen/dp_10"
+            android:background="@drawable/border_rect_grey"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            >
+
+            <View
+                android:id="@+id/item_minus"
+                android:layout_width="@dimen/dp_10"
+                android:layout_height="@dimen/dp_2"
+                android:layout_marginLeft="@dimen/dp_8"
+                android:layout_marginRight="@dimen/dp_8"
+                android:background="@color/grey_350"
+                />
+
+            <View
+                android:id="@+id/item_minus_bar"
+                android:layout_width="@dimen/dp_1"
+                android:layout_height="match_parent"
+                android:background="@color/grey_350"
+                />
+
+            <TextView
+                android:id="@+id/item_num"
+                style="@style/text_14_black"
+                android:gravity="center"
+                android:minWidth="@dimen/dp_32"
+                android:text="0"
+                />
+
+            <View
+                android:id="@+id/item_num_bar"
+                android:layout_width="@dimen/dp_1"
+                android:layout_height="match_parent"
+                android:background="@color/grey_350"
+                />
+
+            <ImageView
+                android:id="@+id/item_plus"
+                android:layout_width="@dimen/dp_26"
+                android:layout_height="@dimen/dp_26"
+                android:padding="@dimen/dp_8"
+                android:src="@drawable/icon_add"
+                />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/item_delete"
+        android:layout_width="@dimen/dp_65"
+        android:layout_height="match_parent"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:text="删除"
+        android:background="@color/main_red"
+        android:textSize="@dimen/sp_18"
+        />
+</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
