--- a/app/src/main/res/layout/view_bubble_toast.xml
+++ b/app/src/main/res/layout/view_bubble_toast.xml
@@ -3,15 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/black"
+
     >
 
     <TextView
         android:id="@+id/view_bubble_toast_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_bubble_toast"
         android:textSize="@dimen/sp_12"
         android:textColor="@color/white"
+        android:text="iiiiiiiiiiiii"
         />
 
 </FrameLayout>
