--- a/app/src/main/res/values-sw270dp/dimens.xml
+++ b/app/src/main/res/values-sw270dp/dimens.xml
@@ -181,6 +181,7 @@
 <dimen name="dp_490">352dp</dimen>
 <dimen name="dp_500">360dp</dimen>
 <dimen name="sp_8">5sp</dimen>
+<dimen name="sp_9">6sp</dimen>
 <dimen name="sp_10">7sp</dimen>
 <dimen name="sp_11">7sp</dimen>
 <dimen name="sp_12">8sp</dimen>
