--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -181,6 +181,7 @@
 <dimen name="dp_490">470dp</dimen>
 <dimen name="dp_500">479dp</dimen>
 <dimen name="sp_8">7sp</dimen>
+<dimen name="sp_9">8sp</dimen>
 <dimen name="sp_10">9sp</dimen>
 <dimen name="sp_11">10sp</dimen>
 <dimen name="sp_12">11sp</dimen>
