--- a/app/src/main/res/values-sw375dp/dimens.xml
+++ b/app/src/main/res/values-sw375dp/dimens.xml
@@ -181,6 +181,7 @@
 <dimen name="dp_490">490dp</dimen>
 <dimen name="dp_500">500dp</dimen>
 <dimen name="sp_8">8sp</dimen>
+<dimen name="sp_9">9sp</dimen>
 <dimen name="sp_10">10sp</dimen>
 <dimen name="sp_11">11sp</dimen>
 <dimen name="sp_12">12sp</dimen>
