--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -181,6 +181,7 @@
 <dimen name="dp_490">537dp</dimen>
 <dimen name="dp_500">547dp</dimen>
 <dimen name="sp_8">8sp</dimen>
+<dimen name="sp_9">9sp</dimen>
 <dimen name="sp_10">10sp</dimen>
 <dimen name="sp_11">12sp</dimen>
 <dimen name="sp_12">13sp</dimen>
