--- a/app/src/main/res/drawable/border_rect_grey.xml
+++ b/app/src/main/res/drawable/border_rect_grey.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
 >
-    <corners android:radius="2dp"/>
+    <corners android:radius="@dimen/dp_2"/>
     <stroke android:width="@dimen/dp_0.5" android:color="@color/grey_350"/>
 
 </shape>
