--- a/app/src/main/res/layout/item_store_goods_one.xml
+++ b/app/src/main/res/layout/item_store_goods_one.xml
@@ -77,29 +77,10 @@
 
             <include layout="@layout/space_h"/>
 
-            <ImageView
-                android:id="@+id/item_minus"
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:layout_marginRight="@dimen/dp_10"
-                android:src="@drawable/ic_minus_grey_black"
-                />
-
-            <TextView
-                android:id="@+id/item_num"
+            <cn.czyugang.tcg.client.widget.GoodsPlusMinusView
+                android:id="@+id/item_plus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dp_10"
-                android:text="1"
-                android:textColor="@color/text_black"
-                android:textSize="@dimen/sp_16"/>
-
-            <ImageView
-                android:id="@+id/item_plus"
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:layout_marginRight="@dimen/dp_10"
-                android:src="@drawable/ic_plus_red"
                 />
 
         </LinearLayout>
