--- a/app/src/main/res/layout/item_trolley_store_goods.xml
+++ b/app/src/main/res/layout/item_trolley_store_goods.xml
@@ -27,8 +27,8 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical"
             android:paddingBottom="@dimen/dp_10"
             android:paddingTop="@dimen/dp_10">
@@ -91,57 +91,11 @@
             />
 
         <!--增减-->
-        <LinearLayout
+        <cn.czyugang.tcg.client.widget.GoodsPlusMinusView
+            android:id="@+id/item_plus_minus"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_24"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_14"
-            android:layout_marginRight="@dimen/dp_10"
-            android:background="@drawable/border_rect_grey"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            >
-
-            <View
-                android:id="@+id/item_minus"
-                android:layout_width="@dimen/dp_10"
-                android:layout_height="@dimen/dp_2"
-                android:layout_marginLeft="@dimen/dp_8"
-                android:layout_marginRight="@dimen/dp_8"
-                android:background="@color/grey_350"
-                />
-
-            <View
-                android:id="@+id/item_minus_bar"
-                android:layout_width="@dimen/dp_1"
-                android:layout_height="match_parent"
-                android:background="@color/grey_350"
-                />
-
-            <TextView
-                android:id="@+id/item_num"
-                style="@style/text_14_black"
-                android:gravity="center"
-                android:minWidth="@dimen/dp_32"
-                android:text="0"
-                />
-
-            <View
-                android:id="@+id/item_num_bar"
-                android:layout_width="@dimen/dp_1"
-                android:layout_height="match_parent"
-                android:background="@color/grey_350"
-                />
-
-            <ImageView
-                android:id="@+id/item_plus"
-                android:layout_width="@dimen/dp_26"
-                android:layout_height="@dimen/dp_26"
-                android:padding="@dimen/dp_8"
-                android:src="@drawable/icon_add"
-                />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            />
 
     </LinearLayout>
 
@@ -149,10 +103,10 @@
         android:id="@+id/item_delete"
         android:layout_width="@dimen/dp_65"
         android:layout_height="match_parent"
-        android:textColor="@color/white"
+        android:background="@color/main_red"
         android:gravity="center"
         android:text="删除"
-        android:background="@color/main_red"
+        android:textColor="@color/white"
         android:textSize="@dimen/sp_18"
         />
 </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
