资讯栏目主页，粉丝界面，关注界面，标签内容界面，更换封面界面

--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -124,6 +124,7 @@
                     android:layout_marginRight="@dimen/dp_25"
                     android:layout_toLeftOf="@+id/store_collect"
                     android:background="@drawable/dash_v_white"
+                    android:layerType="software"
                     />
 
                 <cn.czyugang.tcg.client.widget.LabelLayout
