--- a/app/src/main/res/layout/activity_inform_myself.xml
+++ b/app/src/main/res/layout/activity_inform_myself.xml
@@ -34,6 +34,26 @@
                     android:src="@drawable/score_bg_red" />
 
 
+                <FrameLayout
+                    android:id="@+id/inform_order_isfollow_frame"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dp_75"
+                    android:visibility="gone">
+                    <TextView
+                        android:id="@+id/inform_order_isfollow"
+                        android:layout_width="@dimen/dp_60"
+                        android:layout_height="@dimen/dp_21"
+                        android:layout_marginLeft="@dimen/dp_100"
+                        android:background="@drawable/bg_rect_cir_red"
+                        android:gravity="right|center"
+                        android:paddingRight="@dimen/dp_10"
+                        android:text="+关注"
+                        android:textColor="@color/white" />
+                </FrameLayout>
+
                 <cn.czyugang.tcg.client.utils.img.ImgView
                     android:id="@+id/myself_head"
                     android:layout_width="@dimen/dp_65"
@@ -41,6 +61,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/dp_50"
                     android:src="@drawable/ic_logout_avatar" />
+
 
                 <TextView
                     android:id="@+id/myself_name"
@@ -75,6 +96,7 @@
                     android:background="@drawable/bg_rect_white">
 
                     <LinearLayout
+                        android:id="@+id/inform_for_myself_follow"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -100,6 +122,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/inform_for_myself_fans"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -125,11 +148,13 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/inform_for_myself_article"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        >
 
                         <TextView
                             android:layout_width="match_parent"
@@ -192,5 +217,7 @@
             android:src="@drawable/ic_back_white" />
 
         <ImageView style="@style/title_search" />
+
+
     </FrameLayout>
 </FrameLayout>
