--- a/app/src/main/res/layout/activity_edit_article.xml
+++ b/app/src/main/res/layout/activity_edit_article.xml
@@ -38,10 +38,10 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dp_15"
+        android:background="@color/white"
         android:paddingBottom="@dimen/dp_15"
         android:paddingLeft="@dimen/dp_10"
-        android:background="@color/white">
+        android:paddingTop="@dimen/dp_15">
 
         <FrameLayout
             android:layout_width="@dimen/dp_130"
@@ -69,7 +69,7 @@
                     style="@style/text_16_grey"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/dp_46"
-                    android:text="编辑封面" />
+                    android:text="添加封面" />
             </FrameLayout>
         </FrameLayout>
     </FrameLayout>
@@ -78,102 +78,170 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_10"
-
         android:background="@color/white"
-        android:orientation="vertical">
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+
         <EditText
             android:id="@+id/edit_article_content_title"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_45"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
-            android:textSize="@dimen/sp_16"
-            android:hint="标题"
-            android:textColorHint="@color/grey_350"
-            android:gravity="center|left"
             android:background="@null"
-            />
+            android:gravity="center|left"
+            android:hint="标题"
+            android:paddingLeft="@dimen/dp_20"
+            android:paddingRight="@dimen/dp_10"
+            android:textColorHint="@color/grey_350"
+            android:textSize="@dimen/sp_16" />
+
         <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_0.5"
+            android:layout_width="@dimen/dp_4"
+            android:layout_height="@dimen/dp_19"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_10"
-            android:background="@color/grey_350"
-            android:layout_below="@id/edit_article_content_title"/>
+            android:layout_marginTop="@dimen/dp_13"
+            android:background="@color/main_red" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_0.5"
-            android:background="@color/grey_350"
+            android:layout_below="@id/edit_article_content_title"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
+            android:background="@color/grey_350" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0.5"
             android:layout_above="@id/edit_article_toolbar"
-            />
+            android:background="@color/grey_350" />
+
+        <!--底部工具栏-->
         <FrameLayout
             android:id="@+id/edit_article_toolbar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:layout_alignParentBottom="true">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_35"
-                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/dp_5"
                     android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_picture"/>
+                    android:src="@drawable/icon_picture" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_take_photo"/>
+                    android:src="@drawable/icon_take_photo" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_lianjie"/>
+                    android:src="@drawable/icon_lianjie" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_fengxiangshangpin"/>
+                    android:src="@drawable/icon_fengxiangshangpin" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_fengexian"/>
+                    android:src="@drawable/icon_fengexian" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_chehui"/>
+                    android:src="@drawable/icon_chehui" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/dp_5"
-                    android:src="@drawable/icon_huifu"/>
+                    android:src="@drawable/icon_huifu" />
             </LinearLayout>
         </FrameLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_10"
-            android:layout_below="@id/edit_article_content_title"
-            android:layout_above="@id/edit_article_toolbar">
 
-            <EditText
+        <EditText
+            android:id="@+id/edit_article_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/edit_article_toolbar"
+            android:layout_below="@id/edit_article_content_title"
+            android:background="@null"
+            android:gravity="top|left"
+            android:hint="内容"
+            android:padding="@dimen/dp_10"
+            android:textColorHint="@color/grey_350"
+            android:textSize="@dimen/sp_16"
+            android:lineSpacingExtra="@dimen/dp_5"/>
+
+        <TextView
+            android:id="@+id/edit_article_type"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:layout_above="@id/edit_article_toolbar"
+            android:layout_alignRight="@+id/edit_article_toolbar"
+            android:layout_marginBottom="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_16"
+            android:background="@drawable/bg_rect_cir_light_red"
+            android:gravity="center"
+            android:text="原创"
+            android:textColor="@color/main_red"
+            android:textSize="@dimen/sp_16" />
+
+        <LinearLayout
+            android:id="@+id/edit_article_type_content"
+            android:layout_width="@dimen/dp_58"
+            android:layout_height="@dimen/dp_80"
+            android:layout_above="@+id/edit_article_type"
+            android:layout_alignRight="@+id/edit_article_toolbar"
+            android:layout_marginBottom="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_12"
+            android:background="@drawable/bg_bubble"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/edit_article_type_content_original"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="center|left"
-                android:hint="内容"
-                android:textColorHint="@color/grey_350"
+                android:layout_height="@dimen/dp_35"
+                android:gravity="center"
+                android:text="原创"
+                android:textColor="@color/white"
                 android:textSize="@dimen/sp_16" />
-        </ScrollView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_0.5"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_marginRight="@dimen/dp_5"
+                android:background="@color/white" />
+
+            <TextView
+                android:id="@+id/edit_article_type_content_reprint"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_35"
+                android:gravity="center"
+                android:text="转载"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_16" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
