--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -32,6 +32,8 @@
             android:textSize="@dimen/sp_14"
             android:textColor="@color/text_black"
             android:textColorHint="@color/grey_500"
+            android:singleLine="true"
+            android:imeOptions="actionSearch"
             />
 
         <ImageView
