--- a/app/src/main/res/layout/activity_edit_article.xml
+++ b/app/src/main/res/layout/activity_edit_article.xml
@@ -190,7 +190,7 @@
             android:textSize="@dimen/sp_16"
             android:lineSpacingExtra="@dimen/dp_5"/>
 
-        <TextView
+        <Button
             android:id="@+id/edit_article_type"
             android:layout_width="@dimen/dp_50"
             android:layout_height="@dimen/dp_50"
